Phase 9 - FIX3- security config update for prometheus